--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -41,7 +41,7 @@ jobs:
         run: dotnet restore
 
       - name: Run tests
-        run: dotnet test --no-build --verbosity normal
+        run: dotnet test tests/E7.Result.Tests --no-build --verbosity normal
 
   sonarqube:
     runs-on: ubuntu-latest
@@ -79,7 +79,7 @@ jobs:
           dotnet-version: 9.0.x
 
       - name: Build
-        run: dotnet build E7.Result --configuration Release --no-restore
+        run: dotnet build src/E7.Result --configuration Release --no-restore
 
   package-and-publish-lib:
     runs-on: ubuntu-latest
