--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -41,7 +41,7 @@ jobs:
         run: dotnet restore
 
       - name: Run tests
-        run: dotnet test tests/E7.Result.Tests --no-build --verbosity normal
+        run: dotnet test --no-build --verbosity normal
 
   sonarqube:
     runs-on: ubuntu-latest
