--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -62,13 +62,13 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
-          dotnet sonarscanner begin /k:"silviobassi_E7.Result" /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+          dotnet sonarscanner begin /k:"silviobassi_E7.Result" /d:sonar.login="${ secrets.SONAR_TOKEN }"
           dotnet build
-          dotnet sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+          dotnet sonarscanner end /d:sonar.login="${ secrets.SONAR_TOKEN }"
 
   build:
     runs-on: ubuntu-latest
-    needs: [test, sonarqube]
+    needs: [ test, sonarqube ]
 
     steps:
       - uses: actions/checkout@v4
