--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   generate-version:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     permissions:
       contents: write
 
@@ -27,7 +27,7 @@ jobs:
       new_version: ${{ steps.tag_bump.outputs.new_tag }}
 
   test:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
@@ -44,7 +44,7 @@ jobs:
         run: dotnet test --verbosity normal
 
   sonarqube:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     needs: test
 
     steps:
@@ -67,7 +67,7 @@ jobs:
           dotnet sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }} /d:sonar.host.url="https://sonarcloud.io""
 
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     needs: [ test, sonarqube ]
 
     steps:
@@ -82,7 +82,7 @@ jobs:
         run: dotnet build src/E7.Result --configuration Release --no-restore
 
   package-and-publish-lib:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     needs: build
 
     steps:
