--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -45,7 +45,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: [ test, sonarqube ]
+    needs: [ test ]
 
     steps:
       - uses: actions/checkout@v4
