--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -63,7 +63,7 @@ jobs:
 
   package-and-publish-lib:
     runs-on: ubuntu-latest
-    needs: build
+    needs: [ build, generate-version ]
 
     steps:
       - uses: actions/checkout@v4
