--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -36,12 +36,12 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 9.0.x
-
+      
       - name: Restore dependencies
         run: dotnet restore
 
       - name: Run tests
-        run: dotnet test --verbosity normal
+        run: dotnet test --collect "Code Coverage" --verbosity normal
 
   build:
     runs-on: ubuntu-latest
