--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Build
         run: dotnet build src/E7.Result --configuration Release --no-restore
-        
+  
   sonar-cloud-scan:
     needs: [ build ]
     runs-on: ubuntu-latest
@@ -62,6 +62,7 @@ jobs:
 
   generate-version:
     runs-on: ubuntu-latest
+    needs: [ build ]
     permissions:
       contents: write
 
@@ -81,7 +82,7 @@ jobs:
 
   package-and-publish-lib:
     runs-on: ubuntu-latest
-    needs: [ build, generate-version ]
+    needs: [ generate-version, sonar-cloud-scan ]
 
     steps:
       - uses: actions/checkout@v4
