--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,24 +24,6 @@ jobs:
       - name: Run tests
         run: dotnet test --verbosity normal
   
-  build:
-    runs-on: ubuntu-latest
-    needs: [ sonar-cloud-scan ]
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: 9.0.x
-
-      - name: Restore dependencies
-        run: dotnet restore
-
-      - name: Build
-        run: dotnet build src/E7.Result --configuration Release --no-restore
-  
   sonar-cloud-scan:
     needs: [ test ]
     runs-on: ubuntu-latest
@@ -59,6 +41,27 @@ jobs:
             -Dsonar.organization=silviobassi
             -Dsonar.projectKey=silviobassi_E7.Result
             -Dsonar.dotnet.coverage.reportPaths=coverage.xml
+            -Dsonar.sources=lib/
+            -Dsonar.tests=/
+            -Dsonar.verbose=true
+  
+  build:
+    runs-on: ubuntu-latest
+    needs: [ sonar-cloud-scan ]
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 9.0.x
+
+      - name: Restore dependencies
+        run: dotnet restore
+
+      - name: Build
+        run: dotnet build src/E7.Result --configuration Release --no-restore
 
   generate-version:
     runs-on: ubuntu-latest
