--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -41,7 +41,7 @@ jobs:
             -Dsonar.organization=silviobassi
             -Dsonar.projectKey=silviobassi_E7.Result
             -Dsonar.dotnet.coverage.reportPaths=coverage.xml
-            -Dsonar.sources=lib/
+            -Dsonar.sources=/
             -Dsonar.tests=/
             -Dsonar.verbose=true
   
