--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,7 +25,7 @@ jobs:
         run: dotnet test --verbosity normal
   
   sonarqube-scan:
-    needs: [ test ]
+    needs: [ test, build ]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -40,7 +40,7 @@ jobs:
   
   build:
     runs-on: ubuntu-latest
-    needs: [ sonar-cloud-scan ]
+    needs: [ test ]
 
     steps:
       - uses: actions/checkout@v4
