--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,7 +22,7 @@ jobs:
         run: dotnet restore
 
       - name: Run tests
-        run: dotnet test --blame --no-restore --verbosity normal \
+        run: dotnet test tests --blame --no-restore --verbosity normal \
           /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput=opencover.xml
       
       - name: SonarCloud Scan
