--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,7 +22,7 @@ jobs:
         run: dotnet restore
 
       - name: Run tests
-        run: dotnet test tests --no-restore --verbosity normal
+        run: dotnet test --no-restore --verbosity normal
       
       - name: SonarCloud Scan
         uses: SonarSource/sonarqube-scan-action@v4
