--- a/src/E7.Result/E7.Result.csproj
+++ b/src/E7.Result/E7.Result.csproj
@@ -7,7 +7,7 @@
         <Authors>Silvio Luiz Bassi</Authors>
         <Company>Enfatiza7 Consultoria em Tecnologia LTDA</Company>
         <Description>Result pattern implementation</Description>
-        <PackageReadmeFile>..\README.md</PackageReadmeFile>
+        <PackageReadmeFile>src\README.md</PackageReadmeFile>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         
     </PropertyGroup>
