--- a/src/E7.Result/E7.Result.csproj
+++ b/src/E7.Result/E7.Result.csproj
@@ -9,11 +9,13 @@
         <Description>Result pattern implementation</Description>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <PackageTags>Result pattern;.NET;error handling;C#;library;NuGet</PackageTags>
     </PropertyGroup>
-    
+
     <ItemGroup>
         <None Include="README.md" Pack="true" PackagePath="\"/>
+        <None Include="LICENSE" Pack="true" PackagePath="\"/>
     </ItemGroup>
 
 </Project>
