--- a/tests/E7.EasyResult.Tests/E7.EasyResult.Tests.csproj
+++ b/tests/E7.EasyResult.Tests/E7.EasyResult.Tests.csproj
@@ -20,7 +20,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\src\E7.Result\E7.Result.csproj" />
+      <ProjectReference Include="..\..\src\E7.EasyResult\E7.EasyResult.csproj" />
     </ItemGroup>
 
 </Project>
