--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-﻿// Preserve the develop.yml file in the .github/workflows directory
+﻿# Preserve the develop.yml file in the .github/workflows directory
 .github/workflows/develop.yml merge=ours
