--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-﻿# Preserve the production.yml file in the .github/workflows directory
-.github/workflows/production.yml merge=ours
+﻿.github/workflows/production.yml merge=ours
+.gitattributes merge=ours
