--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -4,6 +4,13 @@ on:
   push:
     branches:
       - main
+    paths-ignore:
+      - 'docs/**'
+      - 'README.md'
+      - 'LICENSE'
+      - '.gitignore'
+      - '.github/**'
+      - '.gitattributes'
   workflow_dispatch:
 
 jobs:
