--- a/src/E7.EasyResult/E7.EasyResult.csproj
+++ b/src/E7.EasyResult/E7.EasyResult.csproj
@@ -10,6 +10,7 @@
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <PackageTags>Result pattern;.NET;error handling;C#;library;NuGet</PackageTags>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
 
     <ItemGroup>
