refactor: adding .github/workflows in path-ignore

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -10,7 +10,7 @@ on:
       - 'LICENSE'
       - '.gitignore'
       - '.github/**'
-
+      - '.github/workflows/**'
 jobs:
   test:
     runs-on: ubuntu-latest
