--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -9,7 +9,7 @@ on:
       - 'README.md'
       - 'LICENSE'
       - '.gitignore'
-      - '.github/**'
+      - '.github/workflows/**'
       - '.gitattributes'
   workflow_dispatch:
 
