ref: fixing documentation

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -8,6 +8,8 @@ on:
       - 'src/**'
       - 'tests/**'
       - '.github/**'
+      - 'README.md'
+      - 'LICENSE'
   workflow_dispatch:
 
 jobs:
